Improves hover state of tabs to avoid content shifting (#1184)

--- a/scss/css_properties.scss
+++ b/scss/css_properties.scss
@@ -187,6 +187,7 @@
   --synth-page-neutral: #{$synth-page-neutral};
   --synth-text-neutral: #{$synth-text-neutral};
   --synth-unselected-neutral: #{$synth-unselected-neutral};
+  --synth-unselected-tab: #{$synth-unselected-tab};
   --synth-accent-green: #{$synth-accent-green};
   --synth-dark-background-selected-blue: #{$synth-dark-background-selected-blue};
   --synth-dark-background-pressed-blue: #{$synth-dark-background-pressed-blue};
